--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.1",
     "@unocss/reset": "^0.53.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
