--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@unocss/reset": "^0.53.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
