feat(firebase): setup firebase

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/react": "^4.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@unocss/reset": "^0.53.5",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
